Fix docker image